[package]
name = "pardosa-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Pardosa CLI — append / read DomainEvent streams to .pgno via pardosa::store::EventStore (ADR-0018)"
license.workspace = true
publish = false

[lints]
workspace = true

[lib]
name = "pardosa_cli"
path = "src/lib.rs"

[[bin]]
name = "pardosa-cli"
path = "src/main.rs"

[dependencies]
pardosa = { path = "../pardosa", version = "=0.4.0" }
pardosa-schema = { path = "../pardosa-schema", version = "=0.1.0" }
clap = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
gh-report = { path = "../gh-report", version = "=0.1.0" }
pardosa = { path = "../pardosa", version = "=0.4.0", features = ["test-support"] }
pardosa-schema = { path = "../pardosa-schema", version = "=0.1.0" }
trybuild = { workspace = true }
proptest = { workspace = true }
assert_cmd = { workspace = true }
tempfile = { workspace = true }
xxhash-rust = { workspace = true }
