[package]
name = "pardosa-derive"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Substrate-agnostic event-invariant carrier: sealed traits and derive macros for pardosa events"
license.workspace = true
# Not yet ready for crates.io; path-only deps to pardosa-traits.
publish = false

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }

# pardosa-traits path dep is *not* a proc-macro runtime dep; the derive only
# emits paths (::pardosa_traits::...) into user code. Listed here for workspace
# topological-order correctness and to keep the trait surface anchored.
pardosa-traits = { path = "../pardosa-traits" }
