[package]
name = "pardosa-encoding"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "In-house canonical encoding format for pardosa events (GEN-0035)"
license.workspace = true
publish = false  # internal workspace crate; allows wildcard path-deps under deny.toml (HEAD e364ede)

[lib]
name = "pardosa_encoding"
path = "src/lib.rs"

[dependencies]

[dev-dependencies]
