[package]
name = "pardosa-encoding"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "In-house canonical encoding format for pardosa events (GEN-0035)"
license.workspace = true
publish = false  # internal workspace crate; allows wildcard path-deps under deny.toml (HEAD e364ede)

[lib]
name = "pardosa_encoding"
path = "src/lib.rs"

[features]
# GEN-0041 foreign-crate v0 floor. Each gate enables Encode + Decode for one
# foreign payload type. Flags are off by default so the no-features build
# keeps the encoding substrate dependency-free; downstream crates opt in.
uuid = ["dep:uuid"]
bytes = ["dep:bytes"]
arrayvec = ["dep:arrayvec"]
# GEN-0043 jiff::Timestamp canonical 8-byte LE shape. Foreign-floor twin
# of pardosa-traits' `jiff` gate (traits pulls through to encoding per
# GEN-0043:R3). Off by default.
jiff = ["dep:jiff"]
# PAR-0021 R1 precursor-hash helper. Off by default — GEN-0041 no_std
# substrate stays dep-free when the feature is not selected.
blake3 = ["dep:blake3"]

[dependencies]
# GEN-0041 foreign-floor optional deps. Re-route through the workspace
# table so versions stay aligned with pardosa-traits' twin gates.
uuid = { workspace = true, optional = true }
bytes = { workspace = true, optional = true }
arrayvec = { workspace = true, optional = true }
jiff = { workspace = true, optional = true }
blake3 = { workspace = true, optional = true }

[dev-dependencies]
# FH11 (bead adr-fmt-bw7l) decode-cap behavioural property test. Lives
# in tests/decode_cap_respected.rs only; the library crate remains
# no_std + dep-free. proptest is workspace-pinned per AGENTS.md
# path-hygiene + adr-fmt-toml workspace alignment.
proptest = { workspace = true }
