[package]
name = "pardosa-eventstore"
version = "0.1.0"
description = "Unified-log persistent EventStore backend for cherry-pit, length-prefixed xxh64-framed pardosa-encoding envelopes"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
cherry-pit-core = { workspace = true }
cherry-pit-storage = { path = "../cherry-pit-storage", version = "0.1.0" }
pardosa-encoding = { workspace = true }
thiserror = { workspace = true }
jiff = { workspace = true }
uuid = { workspace = true }
dashmap = "6"
# xxh64 frame trailer (8 bytes after body). Workspace pin is xxhash-rust = "0.8"
# with feature "xxh3" (adr-srv body_hash); we union "xxh64" here. pardosa-genome
# already depends on the same crate with "xxh64", so the union is established.
xxhash-rust = { workspace = true, features = ["xxh64"] }
tracing = { workspace = true }
# tokio: async file IO + per-aggregate mutex. fs/io-util/sync/rt for the
# adapter surface; the workspace pin already enables most of these.
tokio = { workspace = true, features = ["fs", "io-util", "sync", "rt"] }

[dev-dependencies]
tempfile = { workspace = true }
proptest = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util"] }
