[package]
name = "pardosa-mint-private-tests"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[dev-dependencies]
pardosa = { path = "../pardosa", version = "=0.4.0" }
trybuild = { workspace = true }
